# opnsense-ingress-operator

./: .gitignore  CLAUDE.md  Dockerfile  pyproject.toml
.github/workflows/: workflow.yaml
deploy/: clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  namespace.yaml  secret.yaml  serviceaccount.yaml
ingress_operator/: config.py  main.py
ingress_operator/dns/: sync.py
ingress_operator/handlers/: ingress.py
tests/unit/: test_dns_sync.py  test_ingress_handler.py  test_main.py
