[project]
name = "opnsense-ingress-operator"
version = "0.1.3"
description = "Kubernetes operator that syncs Ingress hostnames to OPNsense Unbound DNS"
authors = [{name = "Justin Refi", email = "justinrefi@gmail.com"}]
requires-python = ">=3.12"
dependencies = [
    "kopf>=1.37.0",
    "kubernetes>=31.0.0",
    "opnsense-py",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
    "respx>=0.21.0",
]

[project.scripts]
opnsense-ingress-operator = "ingress_operator.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ingress_operator"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
